--- a/src/main/resources/assets/chalk/lang/sr_sp.json
+++ b/src/main/resources/assets/chalk/lang/sr_sp.json
@@ -1,4 +1,6 @@
 {
+  "block.chalk.chalk_mark_block": "Ознака од креде",
+
   "item.chalk.black_chalk": "Црна креда",
   "item.chalk.red_chalk": "Црвена креда",
   "item.chalk.green_chalk": "Зелена креда",
@@ -12,24 +14,11 @@
   "item.chalk.lime_chalk": "Светло зелена креда",
   "item.chalk.yellow_chalk": "Жута креда",
   "item.chalk.light_blue_chalk": "Светло плава креда",
-  "item.chalk.magenta_chalk": "Пурпурноцрвена креда",
+  "item.chalk.magenta_chalk": "Магента креда",
   "item.chalk.orange_chalk": "Наранџаста креда",
   "item.chalk.white_chalk": "Бела креда",
-  "item.chalk.glowing_black_chalk": "Светлећа црна креда",
-  "item.chalk.glowing_red_chalk": "Светлећа црвена креда",
-  "item.chalk.glowing_green_chalk": "Светлећа зелена креда",
-  "item.chalk.glowing_brown_chalk": "Светлећа браон креда",
-  "item.chalk.glowing_blue_chalk": "Светлећа плава креда",
-  "item.chalk.glowing_purple_chalk": "Светлећа љубичаста креда",
-  "item.chalk.glowing_cyan_chalk": "Светлећа тиркизна креда",
-  "item.chalk.glowing_light_gray_chalk": "Светлећа светло сива креда",
-  "item.chalk.glowing_gray_chalk": "Светлећа сива креда",
-  "item.chalk.glowing_pink_chalk": "Светлећа розе креда",
-  "item.chalk.glowing_lime_chalk": "Светлећа светло зелена креда",
-  "item.chalk.glowing_yellow_chalk": "Светлећа жута креда",
-  "item.chalk.glowing_light_blue_chalk": "Светлећа светло плава креда",
-  "item.chalk.glowing_magenta_chalk": "Светлећа пурпурноцрвена креда",
-  "item.chalk.glowing_orange_chalk": "Светлећа наранџаста креда",
-  "item.chalk.glowing_white_chalk": "Светлећа бела креда",
-  "block.chalk.chalk_mark_block": "Ознака од креде"
+
+  "item.chalk.chalk_box": "Кутија за креде",
+  "item.chalk.chalk_box.tooltip.drawing_with": "Црта са: ",
+  "container.chalk.chalk_box": "Кутија за креде"
 }
